# broccoli

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci_checks.yml  rust.yml  test-broccoli-pio-append-cs.yml  test-broccoli-pio-nandio.yml  todo.yml
broccoli-app-rp2040/: Cargo.toml  Embed.toml  cargo-generate.toml  memory.x  rust-toolchain.toml
broccoli-app-rp2040/.cargo/: config.toml
broccoli-app-rp2040/src/: channel.rs  config.rs  constants.rs  core0.rs  core1.rs  cpu.rs  cpu0.rs  cpu1.rs  ftl.rs  main.rs  nand.rs  resouce.rs  share.rs  storage.rs  task.rs  usb.rs
broccoli-app-rp2040/src/cpu/: cpu0.rs  cpu1.rs
broccoli-app-rp2040/src/ftl/: buffer.rs  interface.rs  ramdisk.rs  request.rs
broccoli-app-rp2040/src/nand/: address.rs  driver.rs  fw_driver.rs  nand_address.rs  nand_pins.rs  pins.rs  pio_driver.rs  port.rs
broccoli-app-rp2040/src/share/: datatype.rs  resouce.rs
broccoli-app-rp2040/src/shared/: constant.rs  datatype.rs  resouce.rs
broccoli-app-rp2040/src/storage/: core_handler.rs  protocol.rs  ramdisk.rs  ramdisk_handler.rs  system.rs
broccoli-app-rp2040/src/storage/misc/: ramdisk.rs
broccoli-app-rp2040/src/task/: ramdisk_task.rs  storage_task.rs  usb_task.rs
broccoli-app-rp2040/src/usb/: internal.rs  msc.rs  scsi.rs
broccoli-codec/: Cargo.toml
broccoli-core/: Cargo.toml
broccoli-core/src/: commander.rs  common.rs  driver.rs  lib.rs  nand.rs  nand_block.rs  ramdisk_handler.rs  storage.rs  storage_handler.rs  util.rs
broccoli-core/src/common/: io_address.rs  io_driver.rs  storage_req.rs
broccoli-core/src/nand/: address.rs  commander.rs  driver.rs  io_driver.rs
broccoli-core/src/storage/: handler.rs  handler_ramdisk.rs  protocol.rs
broccoli-core/src/util/: bitarr.rs
broccoli-datamap/: Cargo.toml  rust-toolchain.toml
broccoli-driver-rp2040/: Cargo.toml
broccoli-driver-rp2040/src/: driver.rs  lib.rs  nand.rs
broccoli-driver-rp2040/src/nand/: driver.rs  pins.rs
broccoli-nandio/: Cargo.toml
broccoli-nandio-rp2040/: Cargo.toml  rust-toolchain.toml
broccoli-nandio-rp2040/src/: driver.rs  pins.rs
broccoli-nandio/src/: address.rs  cmd.rs  commander.rs  driver.rs  lib.rs  pins.rs
broccoli-util/: Cargo.toml
broccoli-util/src/: bitarr.rs  lib.rs
core/datamap/: Cargo.toml
core/nandio/: Cargo.toml
core/nandio/src/: lib.rs  pins.rs
misc/: setup.bat  setup_python.bat  setup_python.sh  setup_rust.bat  setup_rust.sh  setup_venv_ubuntu.fish
misc/broccoli-pio-append-cs/: .gitignore  Dockerfile  broccoli-pio-append-cs.ipynb  broccoli-pio-append-cs.pio  docker-compose.yml
misc/broccoli-pio-nandio/: .gitignore  Dockerfile  broccoli-pio-nandio.ipynb  broccoli-pio-nandio.pio  docker-compose.yml
misc/broccoli-pio-nandio/obsoleted/: 02-nand-cmd-with-bitbang.ipynb  03-latch-cmd-with-bitbang.ipynb  pio-nandio.ipynb
misc/data-layout/: README.md  data-layout.ipynb
misc/data-layout/obsoleted/: data-layout-ecc-128b130b.ipynb
misc/design-memo/: capacity.md  data-layout.ipynb  data-layout.md
misc/pio-nandio/: broccoli-nandio.pio  nandio.pio  pio-nandio.ipynb
src/: main.rs  nandio.rs
