[package]
edition = "2021"
name = "broccoli-app-rp2040"
version = "0.2.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.8"
pio = "0.2.1"
pio-proc = "0.2.2"

bitflags = "2.5.0"
bit_field = "0.10.2"
bitfield = "0.15.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.7"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.9", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

broccoli-nandio = { path = "../broccoli-nandio" }
broccoli-nandio-rp2040 = { path = "../broccoli-nandio-rp2040" }
broccoli-util = { path = "../broccoli-util" }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",

] }
embassy-time = { version = "0.3.2", features = ["defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
critical-section = "1.1.2"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"
static_cell = "2.1.0"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
heapless = "0.8.0"
fixed = "1.28.0"
fixed-macro = "1.2.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
