[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "broccoli-app-rp2040"
version = "0.3.0"

[dependencies]

broccoli-core = { path = "../broccoli-core", features = ["defmt", "ramdisk"] }

async-trait = "0.1.80"
bit_field = "0.10.2"
bitfield = "0.15.0"
bitflags = "2.5.0"
byteorder = { version = "1.4", default-features = false }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-futures = { version = "0.1.0" }
embassy-rp = { version = "0.2.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
heapless = { version = "0.8", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
smart-leds = "0.3.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
log = "0.4"
num_enum = { version = "0.7.3", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = [
  "critical-section",
] }
pio = "0.2.1"
pio-proc = "0.2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
static_cell = "2.1"
trait-variant = "0.1.2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[dev-dependencies]
async-mock = "0.1.3"
fake = "2.9.2"
mockall = "0.13.0"
tokio = "1.40.0"
