[package]
name = "broccoli-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-mock = "0.1.3"
async-trait = "0.1.80"
bit_field = "0.10.2"
bitfield = "0.15.0"
bitflags = "2.5.0"
trait-variant = "0.1.2"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
fake = "2.9.2"
mockall = "0.12.1"
