[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "broccoli-core"
version = "0.3.0"

[dependencies]
async-trait = "0.1.80"
bit_field = "0.10.2"
bitfield = "0.15.0"
bitflags = "2.5.0"
bitvec = { version = "1.0.1", default-features = false, features = [
    "alloc",
    "atomic",
] }
byteorder = { version = "1.4", default-features = false }
defmt = { version = "0.3.8", optional = true }
num_enum = { version = "0.7.3", default-features = false }
trait-variant = "0.1.2"

[features]
default = ["ramdisk", "ramdisk_sample_data"]
defmt = ["dep:defmt"]
ramdisk = []
ramdisk_sample_data = []

[dev-dependencies]
async-mock = "0.1.3"
async-std = { version = "1.13.0", features = ["attributes"] }
fake = "2.9.2"
mockall = "0.12.1"
rstest = "0.22.0"
tokio = { version = "1.38.0", features = ["full"] }
