[package]
name = "broccoli-nandio-rp2040"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.8"

broccoli-nandio = { path = "../broccoli-nandio" }
